Fix build issue and added out of box form and video blocks

--- a/blocks/table/table.css
+++ b/blocks/table/table.css
@@ -89,7 +89,7 @@
   color: transparent;
   font-size: 100px;
   background-clip: text;
-  margin: 0px 40px;
+  margin: 0 40px;
   background-position: center;
 }
 
